# rust-wasm-toolkit

./: Cargo.toml  README.md
docs/api/: endpoints.md
docs/architecture/: system-design.md
src/: lib.rs
tests/integration/: e2e.spec.js
tests/unit/: core.test.js
www/: index.js
